tests/comp/sem/invalid/assign_int_to_ref.mj
class A {

	public void test(A foo) {
		/*** foo = 3 - 9; ***/
	}

	public static void main(String[] args) {
	}

}
